--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,6 +44,10 @@ body{
     width: 100%;
 }
 
+.contenedor_btns{
+    width: 100%;
+}
+
 .mensajeUsuario{
     margin-top: 1.5rem;
     padding: 1rem;
@@ -64,7 +68,7 @@ textarea{
 }
 
 button{
-    width: 47%;
+    width: 48%;
     padding: 0.5rem;
     border-style: none;
     border-radius: 0.5rem;
@@ -97,7 +101,7 @@ button:active{
     width: 45%;
 }
 
-.imagen_texto{
+.img{
     visibility: hidden;
 }
 
@@ -105,6 +109,77 @@ button:active{
     width: 70%;
 }
 
+.imagen_texto{
+    visibility: hidden;
+}
+
 .copiar{
     display: none;
+}
+
+@media (max-width: 980px) {
+
+    .titulo{
+        text-align: center;
+    }
+    
+    .principal{
+        flex-direction: column;
+        align-items: center;
+        gap: 2rem;
+    }
+
+    .btnNuevo{
+        width: 100%;
+    }
+
+    .mensajeUsuario{
+        box-sizing: border-box;
+    }
+
+    .mensaje{
+        width: 50%;
+    }
+
+    .contenedor_btns{
+        margin-top: 2rem;
+        width: 100%;
+    }
+
+    .contenedor_btns div{
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        gap: 1.5rem;
+        
+    }
+
+    .encriptado{
+        width: 50%;
+    }
+
+    .imagen, .imagenTexto{
+        display: none;
+    }
+
+    .encriptado{
+        width: 50%;
+        padding: 0.5rem;
+        border-radius: 0.5rem;
+    }
+    
+}
+
+@media (max-width: 464px) {
+    .titulo{
+        font-size: 1.5rem;
+    }
+
+    .mensaje{
+        width: 80%;
+    }
+
+    .encriptado{
+        width: 80%;
+    }
 }
